--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -1,297 +1,251 @@
-name: iOS Manual Build & TestFlight (No Match)
+name: iOS Manual Deploy (TestFlight)
 
 on:
-  push:
-    branches:
-      - main
   workflow_dispatch:
+    inputs:
+      changelog:
+        description: "Release notes (shown in TestFlight)"
+        required: false
+        default: ""
+
+concurrency:
+  group: ios-testflight-${{ github.ref }}
+  cancel-in-progress: false
 
 jobs:
-  build-and-upload-ios:
+  build-and-upload:
     runs-on: macos-14
+    timeout-minutes: 60
 
     env:
-      IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
-      IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
-      IOS_PROFILE_BASE64: ${{ secrets.IOS_PROFILE_BASE64 }}
-      KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+      # --- Toolchain ---
+      NODE_VERSION: "22"
+      RUBY_VERSION: "3.2"
 
-      APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
-      APP_STORE_CONNECT_API_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_ISSUER_ID }}
-      APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+      # --- iOS build settings ---
+      IOS_WORKSPACE: ios/JunoNative.xcworkspace
+      IOS_SCHEME: JunoNative
+      IOS_CONFIGURATION: Release
 
+      ARCHIVE_PATH: ${{ runner.temp }}/JunoNative.xcarchive
+      EXPORT_DIR: ${{ runner.temp }}/export
+      EXPORT_OPTIONS_PLIST: ${{ runner.temp }}/ExportOptions.plist
+
+      # --- App Store Connect API key files (generated at runtime) ---
+      ASC_KEY_P8_PATH: ${{ runner.temp }}/AuthKey.p8
+      ASC_KEY_JSON_PATH: ${{ runner.temp }}/asc_api_key.json
+
+      # --- Required secrets (mapped into env for clarity) ---
       APP_IDENTIFIER: ${{ secrets.APP_IDENTIFIER }}
       APPLE_TEAM_ID: ${{ secrets.APPLE_TEAM_ID }}
 
-      IOS_SCHEME: JunoNative
-      XCODEGEN_SPEC: ios/JunoNativeApp.yml
+      APP_STORE_CONNECT_API_KEY_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ID }}
+      APP_STORE_CONNECT_API_KEY_ISSUER_ID: ${{ secrets.APP_STORE_CONNECT_API_KEY_ISSUER_ID }}
+      # Base64 of the entire .p8 file contents (recommended), OR raw .p8 text
+      APP_STORE_CONNECT_API_KEY_BASE64: ${{ secrets.APP_STORE_CONNECT_API_KEY_BASE64 }}
+
+      # Base64 .p12 for Apple Distribution cert + its password
+      IOS_DIST_CERT_BASE64: ${{ secrets.IOS_DIST_CERT_BASE64 }}
+      IOS_DIST_CERT_PASSWORD: ${{ secrets.IOS_DIST_CERT_PASSWORD }}
+
+      # The exact provisioning profile *name* in the Apple portal (ex: "match AppStore com.example.app")
+      IOS_APPSTORE_PROFILE_NAME: ${{ secrets.IOS_APPSTORE_PROFILE_NAME }}
 
     steps:
-      - name: Checkout repository
+      - name: 🧾 Checkout
         uses: actions/checkout@v4
 
-      - name: Print runner/tool versions
-        shell: bash
+      - name: 🧰 Setup Node.js (with Yarn cache)
+        uses: actions/setup-node@v4
+        with:
+          node-version: ${{ env.NODE_VERSION }}
+          cache: yarn
+          cache-dependency-path: yarn.lock
+
+      - name: 💎 Setup Ruby (Bundler cache)
+        uses: ruby/setup-ruby@v1
+        with:
+          ruby-version: ${{ env.RUBY_VERSION }}
+          bundler-cache: true
+
+      - name: 🧪 Print toolchain versions
         run: |
           set -euo pipefail
-          sw_vers || true
-          xcodebuild -version
-          xcode-select -p
-          ruby -v || true
-          node -v || true
-          npm -v || true
+          node -v
+          corepack --version || true
           yarn -v || true
-          python3 -V || true
+          ruby -v
+          bundle -v
+          xcodebuild -version
 
-      - name: Install dependencies (xcodegen, cocoapods)
-        shell: bash
-        run: |
-          set -euo pipefail
-          brew list xcodegen >/dev/null 2>&1 || brew install xcodegen
-          brew list cocoapods >/dev/null 2>&1 || brew install cocoapods
-          xcodegen --version
-          pod --version
-
-      - name: Install JavaScript dependencies
-        shell: bash
+      - name: 📦 Install JS deps
         run: |
           set -euo pipefail
           corepack enable || true
-          if [ -f yarn.lock ]; then
-            yarn install --frozen-lockfile
-          elif [ -f package-lock.json ]; then
-            npm ci
+
+          if [ -f ".yarnrc.yml" ]; then
+            yarn install --immutable
           else
-            echo "::error::No yarn.lock or package-lock.json found"
-            exit 1
+            yarn install --frozen-lockfile
           fi
 
-      - name: Ensure XcodeGen source dir exists (workaround for missing ios/JunoNativeApp)
-        shell: bash
-        run: |
-          set -euo pipefail
-          if [ ! -d "ios/JunoNativeApp" ]; then
-            if [ -d "ios/JunoNative" ]; then
-              echo "::notice::ios/JunoNativeApp missing. Copying from ios/JunoNative -> ios/JunoNativeApp"
-              rsync -a "ios/JunoNative/" "ios/JunoNativeApp/"
-            else
-              echo "::error::ios/JunoNativeApp missing AND ios/JunoNative not found. Cannot satisfy XcodeGen spec."
-              ls -la ios || true
-              exit 1
-            fi
-          fi
-          ls -la ios
-
-      - name: Generate Xcode project (XcodeGen)
-        shell: bash
-        run: |
-          set -euo pipefail
-          if [ ! -f "${XCODEGEN_SPEC}" ]; then
-            echo "::error::XcodeGen spec not found: ${XCODEGEN_SPEC}"
-            ls -la ios || true
-            exit 1
-          fi
-          xcodegen generate --spec "${XCODEGEN_SPEC}"
-          find ios -maxdepth 2 -name "*.xcodeproj" -print || true
-
-      - name: Install CocoaPods (creates/updates workspace)
-        shell: bash
+      - name: 🧱 CocoaPods install
         run: |
           set -euo pipefail
           cd ios
-          pod install --verbose
-          cd ..
+          bundle exec pod --version
+          bundle exec pod install --repo-update
 
-          echo "::group::Workspaces detected"
-          find ios -maxdepth 2 -name "*.xcworkspace" -print || true
-          echo "::endgroup::"
-
-          # IMPORTANT: .xcworkspace is a DIRECTORY, not a file
-          WORKSPACE_DIR="$(find ios -maxdepth 2 -type d -name '*.xcworkspace' -print | head -n 1)"
-          if [ -z "${WORKSPACE_DIR:-}" ] || [ ! -d "${WORKSPACE_DIR}" ]; then
-            echo "::error::No .xcworkspace directory found after pod install"
-            ls -la ios || true
-            exit 1
-          fi
-
-          echo "IOS_WORKSPACE=${WORKSPACE_DIR}" >> "$GITHUB_ENV"
-          echo "::notice::Using workspace: ${WORKSPACE_DIR}"
-
-      - name: Decode signing assets and create keychain
-        shell: bash
+      - name: 🔑 Write App Store Connect API key files (p8 + json)
         run: |
           set -euo pipefail
 
-          CERT_PATH="$RUNNER_TEMP/dist.p12"
-          PROFILE_PATH="$RUNNER_TEMP/profile.mobileprovision"
-          KEYCHAIN_PATH="$RUNNER_TEMP/app-signing.keychain-db"
+          python3 - <<'PY'
+          import base64, json, os, sys
+          key_id = os.environ["APP_STORE_CONNECT_API_KEY_ID"]
+          issuer = os.environ["APP_STORE_CONNECT_API_KEY_ISSUER_ID"]
+          raw = os.environ["APP_STORE_CONNECT_API_KEY_BASE64"]
+          p8_path = os.environ["ASC_KEY_P8_PATH"]
+          json_path = os.environ["ASC_KEY_JSON_PATH"]
 
-          for v in IOS_DIST_CERT_BASE64 IOS_PROFILE_BASE64 KEYCHAIN_PASSWORD IOS_DIST_CERT_PASSWORD APPLE_TEAM_ID APP_IDENTIFIER; do
-            if [[ -z "${!v:-}" ]]; then
-              echo "::error::Secret/env $v is empty"
-              exit 1
-            fi
-          done
+          # Accept either base64(.p8) or raw .p8 content.
+          data = raw.strip().encode("utf-8")
+          decoded = None
+          try:
+            decoded = base64.b64decode(data, validate=True)
+            if b"BEGIN PRIVATE KEY" not in decoded:
+              decoded = None
+          except Exception:
+            decoded = None
 
-          echo -n "$IOS_DIST_CERT_BASE64" | base64 --decode > "$CERT_PATH" 2>/dev/null || \
-          echo -n "$IOS_DIST_CERT_BASE64" | base64 -D > "$CERT_PATH"
+          if decoded is None:
+            decoded = data
 
-          echo -n "$IOS_PROFILE_BASE64" | base64 --decode > "$PROFILE_PATH" 2>/dev/null || \
-          echo -n "$IOS_PROFILE_BASE64" | base64 -D > "$PROFILE_PATH"
+          with open(p8_path, "wb") as f:
+            f.write(decoded)
 
-          security create-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
-          security set-keychain-settings -lut 21600 "$KEYCHAIN_PATH"
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+          payload = {
+            "key_id": key_id,
+            "issuer_id": issuer,
+            "key_filepath": p8_path
+          }
+          with open(json_path, "w", encoding="utf-8") as f:
+            json.dump(payload, f)
 
-          security import "$CERT_PATH" -P "$IOS_DIST_CERT_PASSWORD" -A -t cert -f pkcs12 -k "$KEYCHAIN_PATH"
-          security list-keychain -d user -s "$KEYCHAIN_PATH"
-          security default-keychain -s "$KEYCHAIN_PATH"
+          print(f"Wrote ASC p8:   {p8_path}")
+          print(f"Wrote ASC json: {json_path}")
+          PY
 
-          security set-key-partition-list -S apple-tool:,apple: -s -k "$KEYCHAIN_PASSWORD" "$KEYCHAIN_PATH"
+      - name: 🔐 Import Apple Distribution certificate (.p12)
+        uses: apple-actions/import-codesign-certs@v3
+        with:
+          p12-file-base64: ${{ env.IOS_DIST_CERT_BASE64 }}
+          p12-password: ${{ env.IOS_DIST_CERT_PASSWORD }}
 
-          echo "KEYCHAIN_PATH=$KEYCHAIN_PATH" >> "$GITHUB_ENV"
-          echo "::notice::Keychain created at $KEYCHAIN_PATH"
+      - name: ✅ Verify codesign identities
+        run: |
+          set -euo pipefail
+          security find-identity -p codesigning -v || true
 
-      - name: Install provisioning profile (extract name/uuid)
-        shell: bash
+      - name: 📥 Install provisioning profile (via fastlane sigh)
         run: |
           set -euo pipefail
 
-          PROFILE_PATH="$RUNNER_TEMP/profile.mobileprovision"
-          PROFILE_PLIST="$RUNNER_TEMP/profile.plist"
+          # sigh supports api_key_path and can install the profile (skip_install=false) :contentReference[oaicite:2]{index=2}
+          bundle exec fastlane run sigh \
+            app_identifier:"$APP_IDENTIFIER" \
+            provisioning_name:"$IOS_APPSTORE_PROFILE_NAME" \
+            readonly:true \
+            skip_install:false \
+            api_key_path:"$ASC_KEY_JSON_PATH"
 
-          security cms -D -i "$PROFILE_PATH" > "$PROFILE_PLIST"
+          echo "Provisioning Profiles directory:"
+          ls -lah "$HOME/Library/MobileDevice/Provisioning Profiles" || true
 
-          PROFILE_UUID=$(/usr/libexec/PlistBuddy -c 'Print :UUID' "$PROFILE_PLIST")
-          PROFILE_NAME=$(/usr/libexec/PlistBuddy -c 'Print :Name' "$PROFILE_PLIST")
-
-          mkdir -p "$HOME/Library/MobileDevice/Provisioning Profiles"
-          cp "$PROFILE_PATH" "$HOME/Library/MobileDevice/Provisioning Profiles/$PROFILE_UUID.mobileprovision"
-
-          echo "PROFILE_NAME=$PROFILE_NAME" >> "$GITHUB_ENV"
-          echo "PROFILE_UUID=$PROFILE_UUID" >> "$GITHUB_ENV"
-          echo "::notice::Installed provisioning profile: $PROFILE_NAME ($PROFILE_UUID)"
-
-      - name: Create ExportOptions.plist (manual signing)
-        shell: bash
+      - name: 🧾 Generate ExportOptions.plist
         run: |
           set -euo pipefail
 
-          EXPORT_PLIST="$RUNNER_TEMP/ExportOptions.plist"
-          if [[ -z "${APPLE_TEAM_ID:-}" || -z "${APP_IDENTIFIER:-}" || -z "${PROFILE_NAME:-}" ]]; then
-            echo "::error::Missing APPLE_TEAM_ID / APP_IDENTIFIER / PROFILE_NAME"
-            exit 1
-          fi
+          cat > "$EXPORT_OPTIONS_PLIST" <<PLIST
+          <?xml version="1.0" encoding="UTF-8"?>
+          <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
+          <plist version="1.0">
+          <dict>
+            <key>method</key>
+            <string>app-store</string>
+            <key>signingStyle</key>
+            <string>manual</string>
+            <key>teamID</key>
+            <string>${APPLE_TEAM_ID}</string>
+            <key>provisioningProfiles</key>
+            <dict>
+              <key>${APP_IDENTIFIER}</key>
+              <string>${IOS_APPSTORE_PROFILE_NAME}</string>
+            </dict>
+            <key>stripSwiftSymbols</key>
+            <true/>
+            <key>compileBitcode</key>
+            <false/>
+          </dict>
+          </plist>
+          PLIST
 
-          export EXPORT_PLIST
-          python3 -c 'import os, plistlib, pathlib; d={"method":"app-store","teamID":os.environ["APPLE_TEAM_ID"],"signingStyle":"manual","provisioningProfiles":{os.environ["APP_IDENTIFIER"]:os.environ["PROFILE_NAME"]}}; pathlib.Path(os.environ["EXPORT_PLIST"]).write_bytes(plistlib.dumps(d))'
-          plutil -lint "$EXPORT_PLIST"
+          /usr/bin/plutil -lint "$EXPORT_OPTIONS_PLIST"
 
-          echo "EXPORT_PLIST=$EXPORT_PLIST" >> "$GITHUB_ENV"
-          echo "::notice::ExportOptions.plist ready at $EXPORT_PLIST"
-
-      - name: Build archive (must be an app archive)
-        shell: bash
+      - name: 🏗️ Build archive
         run: |
           set -euo pipefail
-          ARCHIVE_PATH="$RUNNER_TEMP/JunoNative.xcarchive"
-
-          echo "::group::xcodebuild -list"
-          xcodebuild -list -workspace "${IOS_WORKSPACE}"
-          echo "::endgroup::"
 
           xcodebuild \
-            -workspace "${IOS_WORKSPACE}" \
-            -scheme "${IOS_SCHEME}" \
-            -configuration Release \
+            -workspace "$IOS_WORKSPACE" \
+            -scheme "$IOS_SCHEME" \
+            -configuration "$IOS_CONFIGURATION" \
             -sdk iphoneos \
             -destination "generic/platform=iOS" \
             -archivePath "$ARCHIVE_PATH" \
-            BUILD_DOCUMENTATION_DURING_BUILD=NO \
-            OTHER_CODE_SIGN_FLAGS="--keychain ${KEYCHAIN_PATH}" \
+            DEVELOPMENT_TEAM="$APPLE_TEAM_ID" \
+            CODE_SIGN_STYLE=Manual \
+            PROVISIONING_PROFILE_SPECIFIER="$IOS_APPSTORE_PROFILE_NAME" \
             clean archive
 
-          echo "ARCHIVE_PATH=$ARCHIVE_PATH" >> "$GITHUB_ENV"
-          echo "::notice::Archive created at $ARCHIVE_PATH"
-
-      - name: Validate archive is exportable (must contain exactly one .app)
-        shell: bash
+      - name: 📦 Export IPA
         run: |
           set -euo pipefail
 
-          if [ ! -d "$ARCHIVE_PATH/Products/Applications" ]; then
-            echo "::error::Archive has no Products/Applications. This is not an app archive (generic archive)."
-            echo "::error::That can cause the classic export error: method expected {}."
-            find "$ARCHIVE_PATH/Products" -maxdepth 4 -print || true
-            exit 1
-          fi
-
-          APPS_FOUND="$(find "$ARCHIVE_PATH/Products/Applications" -maxdepth 1 -name "*.app" | wc -l | tr -d ' ')"
-          if [ "$APPS_FOUND" != "1" ]; then
-            echo "::error::Expected exactly 1 .app in Products/Applications, found $APPS_FOUND."
-            echo "::error::Fix in Xcode project: non-app targets should have Skip Install = YES; main app target Skip Install = NO; scheme should archive the app."
-            find "$ARCHIVE_PATH/Products/Applications" -maxdepth 2 -print || true
-            exit 1
-          fi
-
-      - name: Export IPA
-        shell: bash
-        run: |
-          set -euo pipefail
-          EXPORT_PATH="$RUNNER_TEMP/build"
+          rm -rf "$EXPORT_DIR"
+          mkdir -p "$EXPORT_DIR"
 
           xcodebuild -exportArchive \
             -archivePath "$ARCHIVE_PATH" \
-            -exportOptionsPlist "$EXPORT_PLIST" \
-            -exportPath "$EXPORT_PATH"
+            -exportPath "$EXPORT_DIR" \
+            -exportOptionsPlist "$EXPORT_OPTIONS_PLIST"
 
-          echo "EXPORT_PATH=$EXPORT_PATH" >> "$GITHUB_ENV"
-          echo "::notice::Exported to $EXPORT_PATH"
+          echo "Export dir:"
+          ls -lah "$EXPORT_DIR"
 
-      - name: Upload to TestFlight (fastlane pilot + API key JSON)
-        shell: bash
-        run: |
-          set -euo pipefail
-
-          for v in APP_STORE_CONNECT_API_KEY_ID APP_STORE_CONNECT_API_ISSUER_ID APP_STORE_CONNECT_API_KEY_BASE64; do
-            if [[ -z "${!v:-}" ]]; then
-              echo "::error::Secret/env $v is empty"
-              exit 1
-            fi
-          done
-
-          IPA_PATH="$(find "$EXPORT_PATH" -maxdepth 3 -name "*.ipa" | head -n 1)"
-          if [[ -z "${IPA_PATH:-}" || ! -f "$IPA_PATH" ]]; then
-            echo "::error::IPA not found under $EXPORT_PATH"
-            find "$EXPORT_PATH" -maxdepth 4 -type f -print || true
+          IPA_PATH="$(find "$EXPORT_DIR" -maxdepth 2 -name '*.ipa' -print -quit)"
+          if [ -z "$IPA_PATH" ]; then
+            echo "ERROR: IPA not found in $EXPORT_DIR"
             exit 1
           fi
 
-          AUTHKEY_PATH="$RUNNER_TEMP/AuthKey_${APP_STORE_CONNECT_API_KEY_ID}.p8"
-          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 --decode > "$AUTHKEY_PATH" 2>/dev/null || \
-          echo -n "$APP_STORE_CONNECT_API_KEY_BASE64" | base64 -D > "$AUTHKEY_PATH"
+          echo "IPA_PATH=$IPA_PATH" >> "$GITHUB_ENV"
+          echo "Found IPA: $IPA_PATH"
 
-          API_KEY_JSON="$RUNNER_TEMP/appstore_api_key.json"
-          export AUTHKEY_PATH API_KEY_JSON
-          python3 -c 'import os, json, pathlib; key=pathlib.Path(os.environ["AUTHKEY_PATH"]).read_text(); data={"key_id":os.environ["APP_STORE_CONNECT_API_KEY_ID"],"issuer_id":os.environ["APP_STORE_CONNECT_API_ISSUER_ID"],"key":key,"in_house":False}; pathlib.Path(os.environ["API_KEY_JSON"]).write_text(json.dumps(data))'
+      - name: 🚀 Upload to TestFlight (Fastlane)
+        run: |
+          set -euo pipefail
 
-          if ! command -v fastlane >/dev/null 2>&1; then
-            gem install fastlane -N
-          fi
+          # upload_to_testflight supports api_key_path (JSON) :contentReference[oaicite:3]{index=3}
+          bundle exec fastlane run upload_to_testflight \
+            ipa:"$IPA_PATH" \
+            api_key_path:"$ASC_KEY_JSON_PATH" \
+            skip_waiting_for_build_processing:true \
+            changelog:"${{ inputs.changelog }}"
 
-          fastlane pilot upload \
-            --ipa "$IPA_PATH" \
-            --api_key_path "$API_KEY_JSON" \
-            --skip_waiting_for_build_processing true
-
-      - name: Upload debug artifacts (always)
-        if: always()
+      - name: 📎 Upload IPA artifact
         uses: actions/upload-artifact@v4
         with:
-          name: ios-build-debug
-          path: |
-            ${{ runner.temp }}/ExportOptions.plist
-            ${{ runner.temp }}/JunoNative.xcarchive/Info.plist
-            ${{ runner.temp }}/JunoNative.xcarchive
-            ${{ runner.temp }}/build
-          if-no-files-found: warn
+          name: ios-ipa
+          path: ${{ env.IPA_PATH }}
+          if-no-files-found: error
