--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -185,7 +185,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
+          if [ "${{ steps.ruby.outputs.use_bundler }" = "true" ]; then
             if bundle exec ruby -S xcpretty --version >/dev/null 2>&1; then
               echo "XCPRETTY_CMD=bundle exec xcpretty" >> "$GITHUB_ENV"
               bundle exec ruby -S xcpretty --version || true
@@ -424,20 +424,28 @@ jobs:
           rm -rf "$EXPORT_DIR"
           mkdir -p "$EXPORT_DIR"
 
+          # FIX: Explicitly pass code signing arguments. The "Unknown Distribution Error"
+          # often occurs in CI/headless environments when the signing identity/team
+          # cannot be implicitly resolved during the export process.
+          # We force Manual Signing and specify the generic Distribution identity.
+          XCODE_EXPORT_OVERRIDES='CODE_SIGN_IDENTITY="Apple Distribution" CODE_SIGN_STYLE=Manual'
+
           set +o pipefail
           if [ -n "${XCPRETTY_CMD:-}" ]; then
             xcodebuild \
               -exportArchive \
               -archivePath "$ARCHIVE_PATH" \
               -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" \
+              $XCODE_EXPORT_OVERRIDES 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
             XC=${PIPESTATUS[0]}
           else
             xcodebuild \
               -exportArchive \
               -archivePath "$ARCHIVE_PATH" \
               -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
+              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" \
+              $XCODE_EXPORT_OVERRIDES 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
             XC=${PIPESTATUS[0]}
           fi
           set -o pipefail
