--- a/.github/workflows/ios_manual_deploy.yml
+++ b/.github/workflows/ios_manual_deploy.yml
@@ -185,7 +185,7 @@ jobs:
         run: |
           set -euo pipefail
 
-          if [ "${{ steps.ruby.outputs.use_bundler }" = "true" ]; then
+          if [ "${{ steps.ruby.outputs.use_bundler }}" = "true" ]; then
             if bundle exec ruby -S xcpretty --version >/dev/null 2>&1; then
               echo "XCPRETTY_CMD=bundle exec xcpretty" >> "$GITHUB_ENV"
               bundle exec ruby -S xcpretty --version || true
@@ -424,34 +424,31 @@ jobs:
           rm -rf "$EXPORT_DIR"
           mkdir -p "$EXPORT_DIR"
 
-          # FIX: Explicitly pass code signing arguments. The "Unknown Distribution Error"
-          # often occurs in CI/headless environments when the signing identity/team
-          # cannot be implicitly resolved during the export process.
-          # We force Manual Signing and specify the generic Distribution identity.
+          # FIX: Explicitly pass code signing arguments to prevent "Unknown Distribution Error" (Code=2).
           XCODE_EXPORT_OVERRIDES='CODE_SIGN_IDENTITY="Apple Distribution" CODE_SIGN_STYLE=Manual'
 
+          # Get command for xcpretty
+          XCPRETTY_COMMAND="${XCPRETTY_CMD:-}"
+
+          # Construct the base xcodebuild command
+          XCODEBUILD_CMD="xcodebuild -exportArchive -archivePath \"$ARCHIVE_PATH\" -exportPath \"$EXPORT_DIR\" -exportOptionsPlist \"$EXPORT_OPTIONS_PLIST\" $XCODE_EXPORT_OVERRIDES"
+
           set +o pipefail
-          if [ -n "${XCPRETTY_CMD:-}" ]; then
-            xcodebuild \
-              -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" \
-              $XCODE_EXPORT_OVERRIDES 2>&1 | tee "$XCODEBUILD_EXPORT_LOG" | eval "$XCPRETTY_CMD"
+          # The use of 'eval' here is to correctly execute the pipe for xcpretty/tee when conditionally included.
+          if [ -n "${XCPRETTY_COMMAND}" ]; then
+            # Run with xcpretty
+            eval "$XCODEBUILD_CMD 2>&1 | tee \"$XCODEBUILD_EXPORT_LOG\" | $XCPRETTY_COMMAND"
             XC=${PIPESTATUS[0]}
           else
-            xcodebuild \
-              -exportArchive \
-              -archivePath "$ARCHIVE_PATH" \
-              -exportPath "$EXPORT_DIR" \
-              -exportOptionsPlist "$EXPORT_OPTIONS_PLIST" \
-              $XCODE_EXPORT_OVERRIDES 2>&1 | tee "$XCODEBUILD_EXPORT_LOG"
+            # Run without xcpretty
+            eval "$XCODEBUILD_CMD 2>&1 | tee \"$XCODEBUILD_EXPORT_LOG\""
             XC=${PIPESTATUS[0]}
           fi
           set -o pipefail
 
           if [ "${XC:-1}" -eq 0 ]; then
             ls -la "$EXPORT_DIR"
+            # Ensure IPA exists
             test -n "$(find "$EXPORT_DIR" -maxdepth 1 -name "*.ipa" -print -quit)"
           fi
 
